<resources>
    <string name="app_name">CoinQuest</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_to_coinquest">Welcome to CoinQuest</string>
    <string name="coinquest_logo">CoinQuest Logo</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_new_transaction">Add New Transaction</string>
    <string name="total_income_r0_00">Total Income: R0.00</string>
    <string name="total_expenses_r0_00">Total Expenses: R0.00</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="title_e_g_grocery">Title (e.g., Grocery)</string>
    <string name="amount">Amount</string>
    <string name="category_e_g_food">Category (e.g., Food)</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="health">HEALTH</string>
    <string name="score">SCORE</string>
    <string name="default_score">0%</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registration_failed">Username already exists</string>
    <string name="login_failed">Invalid username or password</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="pick_image">Pick Image</string>
    <string name="transaction_image">Transaction Image</string>
    <string name="set_goals">Set Goals</string>
    <string name="income_goal">Income Goal: R%1$.2f / R%2$.2f</string>
    <string name="expense_limit">Expense Limit: R%1$.2f / R%2$.2f</string>
    <string name="min_income_goal">Minimum Monthly Income Goal</string>
    <string name="max_expense_goal">Maximum Monthly Expense Goal</string>
    <string name="save_goals">Save Goals</string>
    <string name="financial_goals">Set Financial Goals</string>
    <string name="hint_min_income">e.g. 5000</string>
    <string name="hint_max_expense">e.g. 3000</string>
    <string name="view_history">View History</string>
    <string name="category_summary">Category Summary</string>
    <string name="back">Back</string>
    <string name="transactions">Transactions</string>
    <string name="select_period">Select Period</string>
    <string name="type_icon">Type Icon</string>
    <string name="select_date">Select Date</string>
    <string name="expenses">EXPENSES</string>
</resources>